[gd_scene load_steps=8 format=3 uid="uid://dob5tqgyakn3v"]

[ext_resource type="Script" path="res://scripts/hawky-tuah/game.gd" id="1_b2yd8"]
[ext_resource type="PackedScene" uid="uid://d2jql552jpv2o" path="res://scenes/hawky-tuah/pipe.tscn" id="2_1qnw0"]
[ext_resource type="PackedScene" uid="uid://dqpdnen3mmpvt" path="res://scenes/hawky-tuah/player.tscn" id="2_3xabt"]
[ext_resource type="Texture2D" uid="uid://ci7cgcekbjlig" path="res://assets/hawky-tuah/sprites/placeholder_background.png" id="3_g1y0l"]
[ext_resource type="FontFile" uid="uid://c4b3jd5xsn4eo" path="res://assets/common/fonts/Pixeled.ttf" id="4_2whbe"]
[ext_resource type="PackedScene" uid="uid://cielxlkut4td7" path="res://scenes/hawky-tuah/ground.tscn" id="4_jd8nd"]
[ext_resource type="PackedScene" uid="uid://dq2gl6uil6db0" path="res://scenes/hawky-tuah/restart_button.tscn" id="7_5gqwf"]

[node name="Game" type="Node2D"]
script = ExtResource("1_b2yd8")
pipe_scene = ExtResource("2_1qnw0")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("3_g1y0l")
offset = Vector2(128, 128)

[node name="MarginContainer" type="MarginContainer" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ScoreLabel" type="Label" parent="Background/MarginContainer"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("4_2whbe")
theme_override_font_sizes/font_size = 10
text = "SCORE: 0"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="Background/MarginContainer"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("4_2whbe")
theme_override_font_sizes/font_size = 10
text = "BEST: 0"
horizontal_alignment = 1

[node name="InstructionsLabel" type="Label" parent="Background/MarginContainer"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_2whbe")
theme_override_font_sizes/font_size = 10
text = "Press Space, up arrow,
or click the left mouse
button to begin"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player" parent="." instance=ExtResource("2_3xabt")]
z_index = 2
position = Vector2(128, 256)
scale = Vector2(0.35, 0.35)

[node name="Ground" parent="." instance=ExtResource("4_jd8nd")]
z_index = 1
position = Vector2(0, 512)
scale = Vector2(2, 2)

[node name="PipeTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="RestartButton" parent="." instance=ExtResource("7_5gqwf")]

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="."]

[connection signal="hit" from="Ground" to="." method="_on_ground_hit"]
[connection signal="timeout" from="PipeTimer" to="." method="_on_pipe_timer_timeout"]
[connection signal="restart" from="RestartButton" to="." method="_on_restart_button"]
